// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.lib.teleterm.v1;

option go_package = "github.com/gravitational/teleport/gen/proto/go/teleport/lib/teleterm/v1;teletermv1";

message GetFileServerConfigRequest {
  string cluster_uri = 1;
}
message GetFileServerConfigResponse {
  FileServerConfig config = 1;
}

message SetFileServerConfigRequest {
  string cluster_uri = 1;
  FileServerConfig config = 2;
}
message SetFileServerConfigResponse {}

message FileServerConfig {
  repeated FileServerShare shares = 1;
}

message FileServerShare {
  string name = 1;
  string path = 2;

  bool allow_anyone = 3;
  repeated string allowed_users = 4;
  repeated string allowed_roles = 5;
}
